back: bump 1.6.4, refactor
