# src/main/kotlin/org/cloud_assess/controller/VirtualMachinesController.kt
@@ -1,31 +1,20 @@
 package org.cloud_assess.controller
 
-import org.cloud_assess.dto.request.ServiceLayerDto
-import org.cloud_assess.dto.response.VirtualMachineListAssessmentDto
-import org.cloud_assess.service.AdapterService
-import org.cloud_assess.service.ExecutionService
+import org.cloud_assess.api.VirtualMachinesApi
+import org.cloud_assess.dto.VirtualMachineListAssessmentDto
+import org.cloud_assess.dto.VirtualMachineListDto
+import org.cloud_assess.service.VirtualMachineService
 import org.cloud_assess.service.MapperService
-import org.cloud_assess.service.PrepareService
-import org.springframework.web.bind.annotation.PostMapping
-import org.springframework.web.bind.annotation.RequestBody
+import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.RestController
 
 @RestController
 class VirtualMachinesController(
-    private val prepareService: PrepareService,
-    private val adapterService: AdapterService,
-    private val executionService: ExecutionService,
+    private val virtualMachineService: VirtualMachineService,
     private val mapperService: MapperService,
-) {
-    @PostMapping("/virtual_machines")
-    fun virtualMachines(
-        @RequestBody dto: ServiceLayerDto
-    ): VirtualMachineListAssessmentDto {
-        val cases = prepareService.prepare(dto)
-        val analysis = cases.mapValues {
-            val rawAnalysis = executionService.run(it.value)
-            adapterService.adapt(it.key, rawAnalysis)
-        }
-        return mapperService.map(analysis, dto)
+) : VirtualMachinesApi {
+    override fun assessVirtualMachines(virtualMachineListDto: VirtualMachineListDto): ResponseEntity<VirtualMachineListAssessmentDto> {
+        val analysis = virtualMachineService.analyze(virtualMachineListDto)
+        return ResponseEntity.ok(mapperService.map(analysis, virtualMachineListDto))
     }
 }
