# src/main/kotlin/org/cloud_assess/dto/request/MemoryTimeUnitsDto.kt
@@ -1,8 +1,0 @@
-package org.cloud_assess.dto.request
-
-import com.fasterxml.jackson.annotation.JsonProperty
-
-enum class MemoryTimeUnitsDto {
-    @JsonProperty("GB_hour")
-    GB_HOUR
-}
