# src/main/kotlin/org/cloud_assess/dto/request/QuantityMemoryTimeDto.kt
@@ -1,8 +1,0 @@
-package org.cloud_assess.dto.request
-
-import com.fasterxml.jackson.annotation.JsonProperty
-
-data class QuantityMemoryTimeDto(
-    @JsonProperty("amount") val amount: Double,
-    @JsonProperty("unit") val unit: MemoryTimeUnitsDto,
-)
